--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,4 +55,7 @@ body {
     transform-origin: top left;
     transition: transform 0.3s ease;
 }
+.linkHover.active::before {
+    transform: scaleX(1);
+}
 /* end */
